# api/consult-api.swagger.yaml
@@ -68,28 +68,27 @@ paths:
           description: "Invalid request."
           schema:
             $ref: "#/definitions/Error"
-#    TODO: Comment-Out 6
-#    get:
-#      tags:
-#        - "consultation"
-#      summary: "Visos konsultacija."
-#      description: "Visos konsultacija."
-#      operationId: "getConsultations"
-#      consumes:
-#        - "application/json"
-#      produces:
-#        - "application/json"
-#      responses:
-#        200:
-#          description: "Konsultacijų masyvas."
-#          schema:
-#            type: "array"
-#            items:
-#              $ref: '#/definitions/ConsultationResp'
-#        400:
-#          description: "Invalid request."
-#          schema:
-#            $ref: "#/definitions/Error"
+    get:
+      tags:
+        - "consultation"
+      summary: "Visos konsultacija."
+      description: "Visos konsultacija."
+      operationId: "getConsultations"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "Konsultacijų masyvas."
+          schema:
+            type: "array"
+            items:
+              $ref: '#/definitions/ConsultationResp'
+        400:
+          description: "Invalid request."
+          schema:
+            $ref: "#/definitions/Error"
 
 
 definitions:
@@ -115,7 +114,7 @@ definitions:
     description: "Konsultacijos kūrimo struktūra."
     type: "object"
     properties:
-      name:
+      task:
         description: 'Konsultacijos pavadinimas.'
         format: string
         type: string
@@ -127,14 +126,9 @@ definitions:
     properties:
       id:
         description: 'Konsultacijos pavadinimas.'
-#        format: ObjectId
-#        type: string
-        x-go-custom-tag: bson:"_id"
-        x-go-type:
-          import:
-            package: 'github.com/globalsign/mgo/bson/specdata'
-          type: 'ObjectId'
-      name:
+        format: string
+        type: string
+      task:
         description: 'Konsultacijos pavadinimas.'
         format: string
         type: string
